<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokedex">Pokédex</string>
    <string name="search">Search</string>
    <string name="pokemon_name">Pokémon Name</string>
    <string name="placeholder999">#999</string>
    <string name="about">About</string>
    <string name="base_stats">Base Stats</string>
    <string name="arrow_next">arrow next</string>
    <string name="arrow_before">arrow before</string>
    <string name="silhouette_image_view">silhouette image view</string>
    <string name="arrow_back">arrow back</string>
    <string name="height">Height</string>
    <string name="pokeball_big_image">pokeball big image</string>
</resources>