<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pokemonDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wireframe"
    android:padding="4dp"
    tools:context=".presentation.detail.PokemonDetailFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <ImageView
        android:id="@+id/pokeballBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pokeball_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/pokeball_big_image" />

    <LinearLayout
        android:id="@+id/titleLinearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/arrowBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/pokemonNameTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:text="@string/pokemon_name"
            android:textAppearance="@style/headline" />

        <TextView
            android:id="@+id/pokemonNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder999"
            android:textAppearance="@style/subtitle2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imageLinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:paddingHorizontal="20dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/topGuideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleLinearLayout">

        <ImageButton
            android:id="@+id/arrowBeforeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/arrow_before"
            android:src="@drawable/chevron_left" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/arrowNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/arrow_next"
            android:rotation="180"
            android:src="@drawable/chevron_left" />
    </LinearLayout>

    <ImageView
        android:id="@+id/silhouetteImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:elevation="2dp"
        android:src="@drawable/image_big"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageLinearLayout"
        android:contentDescription="@string/silhouette_image_view" />

    <LinearLayout
        android:id="@+id/pokemonStatsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/recycler_background"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="56dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageLinearLayout">

        <LinearLayout
            android:id="@+id/chipsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chipRecyclerView"
                android:layout_width="wrap_content"
                android:nestedScrollingEnabled="false"
                android:isScrollContainer="false"
                android:orientation="horizontal"
                android:layout_height="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/aboutTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/about"
            android:textAlignment="center"
            android:textAppearance="@style/subtitle1"
            android:textColor="@color/wireframe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/weightDetailAboutCard"
                layout="@layout/detail_about_card" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/lightGray" />

            <include
                android:id="@+id/heightDetailAboutCard"
                layout="@layout/detail_about_card" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/lightGray" />

            <include
                android:id="@+id/movesDetailAboutCard"
                layout="@layout/detail_about_card_text" />

        </LinearLayout>

        <TextView
            android:id="@+id/pokemonDescriptionText"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/body3"
            android:textColor="@color/darkGray"
            android:maxLines="3"
            android:paddingVertical="16dp"
            android:ellipsize="end"
            android:text="" />

        <TextView
            android:id="@+id/baseStatsTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/base_stats"
            android:layout_marginVertical="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/subtitle1"
            android:textColor="@color/wireframe" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/baseStatsRecyclerView"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            android:isScrollContainer="false"
            android:layout_height="0dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pokemonStatsProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideLine"
        android:indeterminate="true"
        android:indeterminateTint="@color/primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/errorTextView"
        android:background="@drawable/recycler_background"
        android:textAppearance="@style/subtitle1"
        android:textColor="@color/primary"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideLine"
        android:layout_width="match_parent"
        android:layout_height="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>